# flask-rest-experiment

./: .gitignore  README.md  alembic.ini  insomnia.yaml  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 3f4fb1e7d338_initial_model_generation.py
flask_rest_experiment/: app.py  database.py  models.py  rest.py  views.py
