[tool.poetry]
name = "flask-rest-experiment"
version = "0.1.0"
description = ""
authors = ["Vic Garcia <vic.garcia@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
SQLAlchemy = "^1.4.25"
alembic = "^1.7.3"
marshmallow = "^3.13.0"
marshmallow-sqlalchemy = "^0.26.1"
marshmallow-enum = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
